# OptionsQuantBot

./: .env  .gitignore  README.md  _parse_runner.py  bot.db  config.yaml  pyproject.toml
alpaca_options_quant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: api_notes.md  decision_tree.md
src/: __init__.py  app.py
src/alpaca_client/: __init__.py  account.py  auth.py  market_data.py  options.py  orders.py  stream.py
src/data/: __init__.py  db.py  models.py  repositories.py
src/features/: __init__.py  implied_move.py  iv_context.py  liquidity.py  trend.py
src/notify/: __init__.py  discord.py
src/pnl/: __init__.py  metrics.py  rollups.py  valuers.py
src/risk/: __init__.py  guardrails.py  sizing.py
src/scheduler/: runner.py
src/selector/: __init__.py  rules.py  strikes.py
src/utils/: config.py  idempotency.py  logging.py  time.py
tests/integration/: test_skeleton.py
tests/unit/: test_indicators.py  test_liquidity.py
